# webeast

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
config/: webeast.toml
src/: config.cpp  defs.cpp  http.cpp  logger.cpp  main.cpp  router.cpp  server.cpp  static.cpp  tpool.cpp
src/include/: config.hpp  defs.hpp  http.hpp  logger.hpp  router.hpp  server.hpp  static.hpp  tpool.hpp
src/include/orm/: bind.hpp  column.hpp  database.hpp  orm.hpp  querygen.hpp  statement.hpp  traits.hpp
src/models/: user.hpp
src/orm/: bind.cpp  database.cpp  querygen.cpp  statement.cpp
static/: form.html  index.html  pic.html
